@@ -1,3 +1,9 @@
+2008-10-14  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * Applied a patch by Nick to make use of Geany Plugin API r100 and the
+   add_document_sensitive() function from plugin API.
+
+
 2008-10-13  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * Applied a patch by Nick to make use of Geany Plugin API r99 and the
